tests/errors/block_parameter_wrong_type_usage.dang
# Test: using block parameter with incompatible operation

pub numbers: [Int!]! = [1, 2, 3]

# ERROR: cannot use Int! as String! (trying to concatenate string to int)
pub result: [String!]! = numbers.map { x -> "value: " + x }
